# jetson-yolov8-usbcam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_2.cpp
scripts/: build_engine.sh
